fix(VideoAsset): dark mode error message color (#18237)

--- a/src/style/components/asset/video-asset.less
+++ b/src/style/components/asset/video-asset.less
@@ -77,7 +77,7 @@
 
     flex-direction: column;
     background-color: var(--background-fade-8);
-    color: #000;
+    color: var(--main-color);
     gap: 16px;
   }
 
